fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.8.2 (YYYY-MM-DD):
  - Add support for the latest ext4 filesystem features
* 0.8.1 (2017-01-10):
  - Improved support for XFS filesystem (contributions from Marcos Mello)
  - Updated documentation and comments in the sources (Marcos Mello) 
* 0.8.0 (2016-08-09):
  - Implemented FAT filesystem support for EFI system partitions
  - Allow user to specify new filesystem label or UUID during restfs
  - Fixed more errors and warnings reported by cppcheck
* 0.6.24 (2016-08-07):
  - Updated man page and description of the commands and options
  - Support for sparse inode chunks on XFS v5
  - Avoid internationalization when running commands so mkfs output can be parsed properly
* 0.6.23 (2016-06-16):
  - Added micro-seconds to timestamp used in the name of the temporary directory
  - Fixed memory leaks on failure scenarios and protect against buffer overflows in scanf
  - Fixed possible failure to restore ext4 filesystems when mkfs running in interactive mode
  - Fixed compilation errors with the musl libc
* 0.6.22 (2016-02-13):
  - Test support for extended attributes and ACLs instead of checking mount options
* 0.6.21 (2016-01-07):
  - Removed duplicate types definitions in order to fix compilation errors
  - Attempt to unmount a device four times before failing
* 0.6.20 (2016-01-03):
  - Detect version of XFS filesystems in order to preserve it when they are restored
  - Add support for XFS filesystems features introduced in XFS version 5
  - Make sure the UUIDs of XFS filesystems are always preserved
* 0.6.19 (2014-03-01):
  - Reverted "number of inode blocks per group" patch which caused a regression in release 0.6.18
* 0.6.18 (2014-02-13):
  - Prepared release sources using autoconf-2.69 to add support for new architectures (RHBZ#925370)