@@ -16,4 +16,6 @@ Many thanks to Marcos Mello who helped a lot improve the XFS support
 in fsarchiver-0.6.20. He found unexpected fsarchiver behaviors with new
 versions of the kernel and xfsprogs, did a lot of research regarding these
 components, and tested the XFS fixes in fsarchiver. He also provided fixes
-and documentation updates in fsarchiver-0.6.24.
+and documentation updates in fsarchiver-0.6.24. He also did a lot of
+research regarding EXT4 and helped improve the handling of extfs on
+very large block devices in fsarchiver-0.8.2.
